[gd_scene load_steps=4 format=3 uid="uid://ck1fh5i6qvcly"]

[ext_resource type="Script" path="res://GamePlay--menus/game_over.gd" id="1_nvu8h"]
[ext_resource type="Texture2D" uid="uid://bbbpujj14jmph" path="res://GamePlay--Textures/MatchOverBlue.png" id="2_y4jss"]
[ext_resource type="Texture2D" uid="uid://cgy5lvpbfw4lo" path="res://GamePlay--Textures/MatchOverRed.png" id="3_4yfbh"]

[node name="gameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvu8h")

[node name="Red" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4yfbh")
stretch_mode = 6

[node name="Blue" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y4jss")
stretch_mode = 6

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_right = 90.0
offset_bottom = 60.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center] Match Over [/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -50.5
offset_right = 88.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="reMatch" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Rematch
"

[node name="newMatch" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Match
"

[node name="returnToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return To Main Menu"

[connection signal="pressed" from="VBoxContainer/reMatch" to="." method="_on_re_match_pressed"]
[connection signal="pressed" from="VBoxContainer/newMatch" to="." method="_on_new_match_pressed"]
[connection signal="pressed" from="VBoxContainer/returnToMenu" to="." method="_on_return_to_menu_pressed"]
